--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "test": "jest",
     "watch": "webpack --config webpack.common.js --watch",
     "start": "electron ."
   },
-  "author": "",
+  "author": "Rohit-Gupta",
   "license": "ISC",
   "dependencies": {
-    "electron": "^13.1.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "electron": "^13.1.9",
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^27.0.1",
+    "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "electron-reload": "^2.0.0-alpha.1",
+    "jest": "^27.0.6",
+    "react-test-renderer": "^17.0.2",
     "sass": "^1.37.5",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
